# API-Do-Jupyter-Notebook-Pro-Deploy

./: .gitignore  Dockerfile  README.md  data.py  main.py  modelos.py  pyproject.toml  requirements-dev.txt  requirements.txt  tests.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  modelos.py  router.py  schemas.py
tests/: conftest.py  test_api.py  test_view.py
