[tool.poetry]
name = "api-do-jupyter-notebook-pro-deploy"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "api_do_jupyter_notebook_pro_deploy" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
uvicorn = "^0.24.0.post1"
taskipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"
pytest = "^7.4.3"
httpx = "^0.25.1"
prospector = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

run = "uvicorn main:app --reload"
lint = "prospector"
test = "pytest -v tests.py"
kill = "kill -9 $(lsof -t -i:8000)"
